--- a/package.json
+++ b/package.json
@@ -2,14 +2,28 @@
   "name": "venta-ropa",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost",
   "dependencies": {
+    "@emotion/react": "^11.11.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "antd": "^5.5.2",
+    "bootstrap": "^5.3.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
+    "express": "^4.18.2",
+    "mysql": "^2.18.1",
+    "ra-data-json-server": "^4.11.1",
     "react": "^18.2.0",
+    "react-admin": "^4.11.1",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.0"
+    "sass": "^1.62.1",
+    "web-vitals": "^2.1.0",
+    "webpack": "^5.85.0",
+    "cors": "^2.8.5"
   },
   "scripts": {
     "start": "react-scripts start",
